single-compoent-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: ClusterIP    # 要用Domain連就用 ClusterIP , IP:Port 用 NodePort 
  selector:
    app: deployment1
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
